@@ -57,13 +57,13 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Surefire Plugin with added --add-opens argument -->
+            <!-- Maven Surefire Plugin with additional JVM options using -D -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M9</version>
                 <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine> <!-- Bypass InaccessibleObjectException -->
+                    <argLine>-Djava.module.opens.java.base/java.lang=ALL-UNNAMED</argLine> <!-- Bypass InaccessibleObjectException -->
                     <useFile>true</useFile>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                 </configuration>
